--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,56 +9,6 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/llSearch"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="#32DA25"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_marginTop="10dp"
-            android:textSize="25sp"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:text="@string/search_product" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <SearchView
-                android:layout_width="250dp"
-                android:background="@drawable/rounded"
-                android:layout_marginBottom="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_height="35dp" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="43dp"
-                android:layout_height="35dp"
-                android:layout_weight="1"
-                android:text="" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/llNavigation"
         android:layout_width="match_parent"
         android:layout_height="80dp"
@@ -86,9 +36,11 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/llNavigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/llSearch"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         >
+
+
 
         <ScrollView
             android:layout_width="match_parent"
@@ -98,7 +50,62 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/llSearch"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:background="#32DA25"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginTop="35dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="@string/search_product"
+                        android:textColor="@color/white"
+                        android:textSize="35sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <SearchView
+                            android:id="@+id/svSearch"
+                            style="@android:style/Widget.Material.Light.SearchView"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="bottom"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginBottom="17dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rounded"
+                            android:baselineAligned="false"
+                            android:scrollbarAlwaysDrawHorizontalTrack="false"
+                            android:verticalScrollbarPosition="defaultPosition"></SearchView>
+
+                        <ImageButton
+                            android:id="@+id/imageButton"
+                            android:layout_width="0dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="bottom"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginEnd="15dp"
+                            android:layout_marginBottom="17dp"
+                            android:layout_weight="0.3"
+                            android:background="@drawable/rounded"
+                            app:srcCompat="@drawable/barcode" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
 
                 <HorizontalScrollView
                     android:id="@+id/hsvTopMenu"
@@ -206,11 +213,11 @@
                     android:id="@+id/tvOffer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/offers"
                     android:layout_marginTop="25dp"
-                    android:textSize="18dp"
                     android:layout_marginBottom="25dp"
-                    android:textColor="@color/black" />
+                    android:text="@string/offers"
+                    android:textColor="@color/black"
+                    android:textSize="18dp" />
 
                 <HorizontalScrollView
                     android:id="@+id/hsvOffers"
@@ -228,9 +235,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="10dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv1"
@@ -251,9 +258,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv2"
@@ -274,9 +281,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv3"
@@ -297,9 +304,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv4"
@@ -320,9 +327,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv5"
@@ -343,9 +350,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="10dp">
+                            android:layout_marginEnd="10dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv6"
@@ -372,10 +379,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
-                    android:textSize="18dp"
                     android:layout_marginBottom="25dp"
                     android:text="@string/best_price"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="18dp" />
 
                 <HorizontalScrollView
                     android:id="@+id/hsvBestPrice"
@@ -393,9 +400,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="10dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv7"
@@ -407,18 +414,18 @@
                                 android:id="@+id/tv7"
                                 android:layout_width="match_parent"
                                 android:layout_height="35dp"
-                                android:textColor="@color/black"
                                 android:ellipsize="end"
                                 android:maxLines="2"
-                                android:text="@string/concrete" />
+                                android:text="@string/concrete"
+                                android:textColor="@color/black" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv8"
@@ -430,18 +437,18 @@
                                 android:id="@+id/tv8"
                                 android:layout_width="match_parent"
                                 android:layout_height="35dp"
-                                android:textColor="@color/black"
                                 android:ellipsize="end"
                                 android:maxLines="2"
-                                android:text="@string/shovel" />
+                                android:text="@string/shovel"
+                                android:textColor="@color/black" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv9"
@@ -453,18 +460,18 @@
                                 android:id="@+id/tv9"
                                 android:layout_width="match_parent"
                                 android:layout_height="35dp"
-                                android:textColor="@color/black"
                                 android:ellipsize="end"
                                 android:maxLines="2"
-                                android:text="@string/motor_cultivator" />
+                                android:text="@string/motor_cultivator"
+                                android:textColor="@color/black" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv10"
@@ -476,18 +483,18 @@
                                 android:id="@+id/tv10"
                                 android:layout_width="match_parent"
                                 android:layout_height="35dp"
-                                android:textColor="@color/black"
                                 android:ellipsize="end"
                                 android:maxLines="2"
-                                android:text="@string/table_set" />
+                                android:text="@string/table_set"
+                                android:textColor="@color/black" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="5dp">
+                            android:layout_marginEnd="5dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv11"
@@ -499,18 +506,18 @@
                                 android:id="@+id/tv11"
                                 android:layout_width="match_parent"
                                 android:layout_height="35dp"
-                                android:textColor="@color/black"
                                 android:ellipsize="end"
                                 android:maxLines="2"
-                                android:text="@string/tent" />
+                                android:text="@string/tent"
+                                android:textColor="@color/black" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="vertical"
                             android:layout_marginStart="5dp"
-                            android:layout_marginEnd="10dp">
+                            android:layout_marginEnd="10dp"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/iv12"
@@ -522,10 +529,10 @@
                                 android:id="@+id/tv12"
                                 android:layout_width="match_parent"
                                 android:layout_height="35dp"
-                                android:textColor="@color/black"
                                 android:ellipsize="end"
                                 android:maxLines="2"
-                                android:text="@string/rack" />
+                                android:text="@string/rack"
+                                android:textColor="@color/black" />
                         </LinearLayout>
                     </LinearLayout>
                 </HorizontalScrollView>
